infrastructure/instances/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth2-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.tazlab.net
      secretName: wildcard-tls
  rules:
    - host: home.tazlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 8000
